# MONOPOLY

./: .gitignore  Cargo.toml
src/: main.rs
web/: monopoly.html
