[package]
name = "monopoly"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "monopoly"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["query"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
dashmap = "5"
